syntax="proto3";
package pb;
import "user.proto";
option go_package="github.com/djsmk123/server/pb";


message LoginRequestMessage{
    string username=1;
    string password=2;
}

message LoginResponseMessage{
    User user=1;
    string access_token=2;
}
